Added thread recorded files